--- a/waveLogin/main.css
+++ b/waveLogin/main.css
@@ -30,9 +30,64 @@ body{
     color: lightblue;
 }
 
+.btn{
+    cursor: pointer;
+    display: inline-block;
+    width: 100%;
+    background: lightblue;
+    padding: 15px;
+    font-family: inherit;
+    font-size: 16px;
+    border: 0;
+    border-radius: 5px;
+}
+
+.btn:focus{
+    outline: 0;
+}
+
+.btn:active{
+    transform: scale(0.98);
+}
 .form-control{
     /* background-color: transparent; */
     position: relative;
-    border: 0;
-    border-bottom: 2px;
+    margin: 20px 0 40px;
+    width: 300px;
 }
+.form-control input {
+ background-color: transparent;
+ border: 0;
+ border-bottom: 2px solid white;
+ display: block;
+ width: 100%;
+ padding: 15px 0;
+ font-size: 18px;
+ color: white;
+}
+
+.form-control input:focus,
+.form-control input:valid{
+    outline: 0;
+    border-bottom-color:lightblue ;
+}
+
+.form-control label {
+    position: absolute;
+    top:15px;
+    left:0;
+}
+
+.form-control label span{
+    display: inline-block;
+    font-size: 18px;
+    min-width: 5px;
+    transition: cubic-bezier(0.65 ,-0.55,0.265,1.55);
+}
+
+.form-control input:focus + label span ,
+.form-control input:valid + label span {
+    color: lightblue;
+    transform: translateY(-30px);
+}
+
